fixed issue with file-tag list not showing tag names the first time they were encountered, simplified code, enlarged main window, restored table view, tag names now link to search page

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -184,6 +184,16 @@ input::-moz-focus-inner {
 	padding-top: 30px;
 	min-height: 225px;
 }
+.col-sm-9 {
+	background-color: #FFFFFF;
+	padding-top: 30px;
+	min-height: 225px;
+}
+.col-sm-9 .intro {
+	background-color: #FFFFFF;
+	padding-top: 30px;
+	min-height: 225px;
+}
 .nav-link {
 	color: white;
 }
